syntax = "proto3";

option go_package = "./pb";

package pb;

message GenerateTokenReq {
  int64 userId = 1;
}
message GenerateTokenResp {
  string accessToken = 1;
  int64  accessExpire = 2;
  int64  refreshAfter = 3;
}


message ClearTokenReq {
  int64 userId = 1;
}
message ClearTokenResp {
  bool ok = 1;
}


message ValidateTokenReq {
  int64 userId = 1;
  string token = 2;
}
message ValidateTokenResp {
  bool ok = 1;
}

service identity {
  // 生成token，只针对用户服务开放访问
  rpc generateToken(GenerateTokenReq) returns(GenerateTokenResp);
  // 清除token，只针对用户服务开放访问
  rpc clearToken(ClearTokenReq) returns(ClearTokenResp);
  // validateToken ，只很对用户服务、授权服务api开放
  rpc validateToken(ValidateTokenReq) returns(ValidateTokenResp);
}
